@startuml

title __SERVICE's Class Diagram__\n

  namespace com.dna.application.backend {
    namespace service {
      class com.dna.application.backend.service.BaseAligner {
          + resourceFolder : String
          {static} ~ getError()
          {static} ~ getInput()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace service {
      class com.dna.application.backend.service.BowtieService {
          {static} - log : Logger
          + align()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace service {
      class com.dna.application.backend.service.TestService {
          {static} - log : Logger
          - passwordEncoder : PasswordEncoder
          + setTestData()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace service {
      class com.dna.application.backend.service.UserDetailsServiceImpl {
          + loadUserByUsername()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace service {
      class com.dna.application.backend.service.UserService {
          - modelMapper : ModelMapper
          - passwordEncoder : PasswordEncoder
          + deleteUser()
          + getUsers()
          + updateUser()
      }
    }
  }
  

  com.dna.application.backend.service.BowtieService -up-|> com.dna.application.backend.service.BaseAligner
  com.dna.application.backend.service.BowtieService o-- com.dna.application.backend.repository.UserRepository : userRepository
  com.dna.application.backend.service.TestService o-- com.dna.application.backend.repository.UserRepository : userRepository
  com.dna.application.backend.service.TestService o-- com.dna.application.backend.service.UserService : userService
  com.dna.application.backend.service.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.dna.application.backend.service.UserDetailsServiceImpl o-- com.dna.application.backend.repository.UserRepository : userRepository
  com.dna.application.backend.service.UserService o-- com.dna.application.backend.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
